--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
     "chart.js": "^3.8.2",
     "faker": "^6.6.6",
@@ -18,12 +20,16 @@
     "mapbox-gl": "^2.9.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-leaflet": "^4.0.1",
     "react-minimal-pie-chart": "^8.3.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
