--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.mjs"
   },
-  "author": "Elias-Omondi",
+  "author": "Sulaimon-Olaniran",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "get-json": "^1.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.4.5",
     "nodemon": "^2.0.19"
