--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
     "chart.js": "^3.8.2",
+    "convert-csv-to-json": "^1.3.3",
     "faker": "^6.6.6",
     "leaflet": "^1.8.0",
     "leaflet-choropleth": "^1.1.4",
     "mapbox-gl": "^2.9.2",
     "node-sass": "^7.0.1",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.3.1",
