--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "get-json": "^1.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.4.5",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "papaparse": "^5.3.2"
   }
 }
