--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "mapbox-gl": "^2.9.2",
     "node-sass": "^7.0.1",
     "papaparse": "^5.3.2",
+    "pusher-js": "^7.4.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.3.1",
