--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.4.5",
     "nodemon": "^2.0.19",
-    "papaparse": "^5.3.2"
+    "papaparse": "^5.3.2",
+    "pusher": "^5.1.1-beta"
   }
 }
