--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "uk parliament database",
+  "description": "uk parliaments data base",
   "main": "index.mjs",
   "type": "module",
   "scripts": {
